--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-sanitize": "~1.4.0",
     "angular-touch": "~1.4.0",
     "firebase": "~2.2.9",
-    "angularfire": "~1.1.2"
+    "angularfire": "~1.1.2",
+    "angular-loading-bar": "~0.8.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
