--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - npm install -g bower grunt-cli
   - gem install compass
   - bower install
-after_script:
+after_success:
   - sh gh-pages.sh
 env:
   global:
