--- a/bower.json
+++ b/bower.json
@@ -3,19 +3,18 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.4.0",
+    "bootstrap-sass-official": "~3.3.0",
     "angular-animate": "~1.4.0",
     "angular-aria": "~1.4.0",
     "angular-cookies": "~1.4.0",
-    "angular-loading-bar": "~0.8.0",
     "angular-messages": "~1.4.0",
     "angular-resource": "~1.4.0",
     "angular-route": "~1.4.0",
     "angular-sanitize": "~1.4.0",
     "angular-touch": "~1.4.0",
-    "angular-ui-tinymce": "~0.0.9",
+    "firebase": "~2.2.9",
     "angularfire": "~1.1.2",
-    "bootstrap-sass-official": "~3.3.0",
-    "firebase": "~2.2.9"
+    "angular-loading-bar": "~0.8.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
