--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,10 @@
   "name": "abdulwahed-alansari-frontend",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.4.0",
     "bootstrap-sass-official": "~3.3.0",
+    "ckeditor": "#full/stable",
+    "firebase": "~2.2.9",
+    "angular": "~1.4.0",
     "angular-animate": "~1.4.0",
     "angular-aria": "~1.4.0",
     "angular-cookies": "~1.4.0",
@@ -12,9 +14,9 @@
     "angular-route": "~1.4.0",
     "angular-sanitize": "~1.4.0",
     "angular-touch": "~1.4.0",
-    "firebase": "~2.2.9",
     "angularfire": "~1.1.2",
-    "angular-loading-bar": "~0.8.0"
+    "angular-loading-bar": "~0.8.0",
+    "angular-ckeditor": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
@@ -29,5 +31,8 @@
         "dist/js/bootstrap.js"
       ]
     }
+  },
+  "resolutions": {
+    "angular": "~1.4.0"
   }
 }
