--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-touch": "~1.4.0",
     "firebase": "~2.2.9",
     "angularfire": "~1.1.2",
-    "angular-loading-bar": "~0.8.0"
+    "angular-loading-bar": "~0.8.0",
+    "angular-elastic": "~2.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
