--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "firebase": "~2.2.9",
     "angularfire": "~1.1.2",
     "angular-loading-bar": "~0.8.0",
-    "angular-elastic": "~2.5.0"
+    "angular-elastic": "~2.5.0",
+    "angular-ckeditor": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
