--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angularfire": "~1.1.2",
     "angular-loading-bar": "~0.8.0",
     "angular-elastic": "~2.5.0",
-    "angular-ckeditor": "~1.0.0"
+    "angular-ckeditor": "~1.0.0",
+    "angular-imgur-upload": "~0.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
