feat(views): Show a progressbar when uploading images

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-loading-bar": "~0.8.0",
     "angular-elastic": "~2.5.0",
     "angular-ckeditor": "~1.0.0",
-    "angular-imgur-upload": "~0.0.1"
+    "angular-imgur-upload": "~0.0.1",
+    "angular-bootstrap": "~0.13.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
